adjusted vertical spacing on stop title

--- a/MMM-MyTTC.css
+++ b/MMM-MyTTC.css
@@ -12,7 +12,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  line-height: 25px;
+  line-height: 28px;
   margin-left: 30px;
 }
 
